@@ -46,6 +46,7 @@ libtorrent/version.hpp \
 libtorrent/aux_/allocate_resources_impl.hpp \
 libtorrent/aux_/session_impl.hpp \
 libtorrent/extensions/metadata_transfer.hpp \
+libtorrent/extensions/ut_pex.hpp \
 libtorrent/extensions/logger.hpp \
 \
 libtorrent/kademlia/closest_nodes.hpp \
